# jejalyk

./: .clang-format  .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  README.md  ast.cpp  ast.h  ast.hpp  build.sh  build_wasm.sh  chrono.h  cleanEval.js  compiler.hpp  dist.sh  jejalyk.cpp  jejalyk.h  jejalyk.hpp  jejalyk_bin.cpp  jejalyk_wasm.cpp  main.cpp  node.ts  package-lock.json  package.json  parser.cpp  parser.h  parser.hpp  test.js  tools.cpp  tools.h  tools.hpp  x.js  x.ts  голова.js  голова.м  головаold.js  лол.м  тест.js  тест.м  ф.м
assets/: jj.html  mavka.js  test.html
compiler/: CompilationError.h  CompilationOptions.cpp  CompilationOptions.h  CompilationResult.h  CompilationScope.cpp  CompilationScope.h  CompilationSubject.h  common.cpp  common.h  compile.cpp  compile.h  newcompiler.h  supercompiler.h  xcompiler.h
compiler/instructions/: compile_anon_diia_node.cpp  compile_anon_diia_node.h  compile_arg_node.cpp  compile_arg_node.h  compile_arithmetic_node.cpp  compile_arithmetic_node.h  compile_array_node.cpp  compile_array_node.h  compile_as_node.cpp  compile_as_node.h  compile_assign_by_element_node.cpp  compile_assign_by_element_node.h  compile_assign_by_identifier_node.cpp  compile_assign_by_identifier_node.h  compile_assign_simple_node.cpp  compile_assign_simple_node.h  compile_bitwise_node.cpp  compile_bitwise_node.h  compile_bitwise_not_node.cpp  compile_bitwise_not_node.h  compile_body.cpp  compile_body.h  compile_break_node.cpp  compile_break_node.h  compile_call_node.cpp  compile_call_node.h  compile_chain_node.cpp  compile_chain_node.h  compile_comparison_node.cpp  compile_comparison_node.h  compile_continue_node.cpp  compile_continue_node.h  compile_dictionary_node.cpp  compile_dictionary_node.h  compile_diia_body.cpp  compile_diia_body.h  compile_diia_node.cpp  compile_diia_node.h  compile_each_node.cpp  compile_each_node.h  (+80 more)
compiler/js/: js.h
compiler/supercompiler/: Error.cpp  Object.cpp  Param.cpp  Scope.cpp  Subject.cpp  compile.cpp  compiler.h
compiler/typeinterpreter/: Object.cpp  Scope.cpp  Subject.cpp  Type.cpp  diia.cpp  structure.cpp  typeinterpreter.cpp  typeinterpreter.h
compiler/typeinterpreter/instructions/: compile_anon_diia.cpp  compile_arithmetic_node.cpp  compile_array_node.cpp  compile_as_node.cpp  compile_assign_by_element_node.cpp  compile_assign_by_identifier_node.cpp  compile_assign_simple_node.cpp  compile_bitwise_node.cpp  compile_bitwise_not_node.cpp  compile_break_node.cpp  compile_call_node.cpp  compile_chain_node.cpp  compile_comparison_node.cpp  compile_continue_node.cpp  compile_dictionary_node.cpp  compile_diia_node.cpp  compile_each_node.cpp  compile_eval_node.cpp  compile_from_to_complex_node.cpp  compile_from_to_simple_node.cpp  compile_function_node.cpp  compile_get_element_node.cpp  compile_give_node.cpp  compile_god_node.cpp  compile_identifier_node.cpp  compile_if_node.cpp  compile_method_declaration_node.cpp  compile_mml_node.cpp  compile_mockup_diia_node.cpp  compile_mockup_module_node.cpp  compile_mockup_structure_node.cpp  compile_mockup_subject_node.cpp  compile_module_node.cpp  compile_negative_node.cpp  compile_not_node.cpp  compile_number_node.cpp  compile_positive_node.cpp  compile_post_decrement_node.cpp  compile_post_increment_node.cpp  compile_pre_decrement_node.cpp  (+13 more)
js/: js.h
parser/: CMakeLists.txt  MavkaLexer.cpp  MavkaLexer.g4  MavkaLexer.h  MavkaLexer.interp  MavkaParser.cpp  MavkaParser.g4  MavkaParser.h  MavkaParser.interp  MavkaParser.tokens  MavkaParserBaseListener.h  MavkaParserBaseVisitor.h  MavkaParserListener.h  MavkaParserVisitor.h  ast.cpp  ast.hpp  parser.cpp  parser.hpp
syntax/: CMakeLists.txt  MavkaLexer.cpp  MavkaLexer.g4  MavkaLexer.h  MavkaLexer.interp  MavkaLexer.tokens  MavkaParser.cpp  MavkaParser.g4  MavkaParser.h  MavkaParser.interp  MavkaParser.tokens  MavkaParserBaseListener.h  MavkaParserBaseVisitor.h  MavkaParserListener.h  MavkaParserVisitor.h
syntax/antlr4-cpp-runtime/runtime/: CMakeLists.txt
typeinterpreter/: Options.cpp  Scope.cpp  Subject.cpp  Type.cpp  diia.cpp  structure.cpp  typeinterpreter.cpp  typeinterpreter.h
typeinterpreter/instructions/: compile_anon_diia.cpp  compile_arithmetic_node.cpp  compile_array_node.cpp  compile_as_node.cpp  compile_assign_by_element_node.cpp  compile_assign_by_identifier_node.cpp  compile_assign_simple_node.cpp  compile_bitwise_node.cpp  compile_bitwise_not_node.cpp  compile_break_node.cpp  compile_call_node.cpp  compile_chain_node.cpp  compile_comparison_node.cpp  compile_continue_node.cpp  compile_dictionary_node.cpp  compile_diia_node.cpp  compile_diia_or_mockup_diia_node.cpp  compile_each_node.cpp  compile_eval_node.cpp  compile_from_to_complex_node.cpp  compile_from_to_simple_node.cpp  compile_function_node.cpp  compile_get_element_node.cpp  compile_give_node.cpp  compile_god_node.cpp  compile_identifier_node.cpp  compile_if_node.cpp  compile_method_declaration_node.cpp  compile_mml_node.cpp  compile_mockup_diia_node.cpp  compile_mockup_module_node.cpp  compile_mockup_structure_node.cpp  compile_mockup_subject_node.cpp  compile_module_node.cpp  compile_mrm_diia_node.cpp  compile_negative_node.cpp  compile_not_node.cpp  compile_number_node.cpp  compile_positive_node.cpp  compile_post_decrement_node.cpp  (+15 more)
джеджалик/: джеджалик.js
